<resources>
    <string name="app_name">CabEz Driver</string>
    <string name="app_id">1025917630817</string>
    <string name="action_settings">Settings</string>
    <string name="text_marketing">Marketing</string>
    <string name="text_sharing">Sharing</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_fname">FIRST NAME</string>
    <string name="text_lname">LAST NAME</string>
    <string name="text_email">EMAIL</string>
    <string name="text_number">MOBILE NUMBER</string>
    <string name="text_area">AREA</string>
    <string name="text_operator">OPERATOR NAME</string>
    <string name="text_passs">PASSWORD</string>
    <string name="text_current_pass">CURRENT PASSWORD</string>
    <string name="text_new_pass">NEW PASSWORD</string>
    <string name="text_retype_pass">CONFIRM NEW PASSWORD</string>
    <string name="text_address">ADDRESS</string>
    <string name="text_bio">BIO</string>
    <string name="text_zip">ZIPCODE</string>
    <string name="text_google">GOOGLE</string>
    <string name="text_facebook">FACEBOOK</string>
    <string name="text_next">NEXT</string>
    <string name="text_signin">SIGN IN</string>
    <string name="text_mything">MY THING</string>
    <string name="text_desc1">DESC.1</string>
    <string name="text_desc2">DESC.2</string>
    <string name="text_comment">COMMENTS</string>
    <string name="text_register">REGISTER</string>
    <string name="text_forget_password">FORGOT PASSWORD</string>
    <string name="text_credit_card_number">CREDIT CARD NUMBER</string>
    <string name="text_changing_default_card">CHANGING DEFAUL CARD</string>
    <string name="text_mm">MM</string>
    <string name="text_yy">YY</string>
    <string name="text_cvc">CVC</string>
    <string name="text_addpayment">ADD PAYMENT</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_available">Available</string>
    <string name="text_unavailable">Unavailable</string>
    <string name="text_or">OR</string>
    <string name="text_forgetpass">FORGOT PASSWORD ?</string>
    <string name="text_scan">SCAN</string>
    <string name="text_contacting">CONTACTING NEARBY DRIVERS</string>
    <string name="text_marketing_achievement">Achievement</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_wait">Wait</string>
    <string name="text_getting_info_facebook">Getting info from facebook</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_location">MY LOCATION</string>
    <string name="client_location">CLIENT LOCATION</string>
    <string name="job_start_location">TRIP PICK UP LOCATION</string>
    <string name="text_miles">KM</string>
    <string name="text_mins">MINS</string>
    <string name="text_profile">Profile</string>
    <string name="text_history">History</string>
    <string name="text_setting">Settings</string>
    <string name="text_help">Help</string>
    <string name="text_avaibility">Availability</string>
    <string name="text_sound">Sound</string>
    <string name="text_baySeat">Bay Seat</string>
    <string name="text_stationWagon">Station Wagon</string>
    <string name="text_wheelChair">Wheel Chair</string>
    <string name="text_taxiExpress">Taxi Express</string>
    <string name="text_jumpleads">Jump Leads</string>
    <string name="text_fuelBottle">Fuel Bottle</string>
    <string name="text_service_type">Service Type</string>
    <string name="text_logout">Logout</string>
    <string name="text_seconds"> SECONDS</string>
    <string name="text_invoice">INVOICE</string>
    <string name="text_base_price">BASE PRICE</string>
    <string name="text_pickup_area">PICKUP AREA</string>
    <string name="text_pickup_time">PICKUP TIME</string>
    <string name="text_dropoff_area">DROPOFF AREA</string>
    <string name="text_booking_fare">BOOKING FARE</string>
    <string name="text_referral_bonus">REFERRAL BONUS</string>
    <string name="text_promo_bonus">PROMO BONUS</string>
    <string name="text_distance_cost">DISTANCE COST</string>
    <string name="text_destination">Client Destination</string>
    <string name="text_time_cost">TIME COST</string>
    <string name="text_time">TIME</string>
    <string name="text_total">TOTAL</string>
    <string name="text_to_pay">R TO PAY</string>
    <string name="text_close">CLOSE</string>
    <string name="text_apply">APPLY</string>
    <string name="text_edit_save">EDIT</string>
    <string name="text_cost_per_mile">$ Per KM</string>
    <string name="text_cost_per_hour">$ Per Hour</string>
    <string name="text_no_history">No history to display</string>
    <string name="text_skip">SKIP</string>
    <string name="text_taxi_model">TAXI MODEL</string>
    <string name="text_taxi_number">Taxi Number</string>
    <string name="text_change_battery">Change Battery</string>
    <string name="text_change_tyre">Change Tyre</string>
    <string name="text_change_belt">Change Belt</string>
    <string name="text_waterLeaking">Water Leaking</string>
    <string name="text_oilLeaking">Oil Leaking</string>
    <string name="text_enginNotStart">Engin Not Start</string>
    <string name="text_carNotMoving">Car Not Moving</string>
    <string name="text_load_weight">Load Weight ( T )</string>
    <string name="text_load_length">Load Length ( M )</string>
    <string name="text_overhere_hails">OverHere Credit</string>
    <string name="text_your_referral_credit">Your Referral Credit</string>
    <string name="text_vehicle_type">Vehicle Type</string>
    <string name="text_approve">Your application is under review by admin. You will receive confirmation email once admin approves your application.</string>
    <string name="text_regemail_popup">Please verify your e-mail address, you will not be able to modify it in future.</string>
    <string name="text_regmodelno_popup">Please verify model of your car, you will not be able to modify it in future.</string>
    <string name="text_regtaxino_popup">Please verify your taxi number, you will not be able to modify it in future.</string>
    <string name="text_regaction_popup">Please verify fields mark with info sign, you will not be able to modify these fields in future.</string>
    <string name="text_profile_popup">This field is not editable.</string>
    <string name="text_confirm">CONFIRM</string>
    <string name="text_exit_ok">OK</string>
    <string name="text_exit_cancel">CANCEL</string>
    <string name="google_maps_key">AIzaSyC5BxfMvkI65keRaCS-NmeI6Zn9-UG6lfs</string>
    <string name="no_internet">Internet not available</string>
    <string name="text_saving_settings">SAVING SETTINGS</string>
    <string name="text_add_card_scucess">Add Card Successfully</string>
    <string name="text_not_add_card_unscucess">Failed To Add Card</string>
    <string name="text_select_payment">Select your payment method</string>
    <string name="multiple_card">You can add multiple cards</string>
    <string name="add_change_bank_account">Add or change bank account</string>
    <string name="your_cards">YOUR CARDS</string>
    <string name="your_bank_account">YOUR BANK ACCOUNT</string>
    <string name="text_card_selection_note">Please click on radio button to select default card.</string>
    <string name="text_credit_card_holder">CREDIT CARD HOLDER</string>
    <string name="text_addpayment_small">Add Payment</string>
    <string name="adding_payment">ADDING CARD</string>
    <string name="text_jobdetails">Job Details</string>
    <string name="file_provider_authority" translatable="false">overthere.fileprovider</string>
    <string name="text_accept">ACCEPT</string>
    <string name="text_go_online_to">Go online to\nreceive trips</string>
    <string name="text_reject">REJECT</string>
    <string name="text_go_offline">Go Offline</string>
    <string name="text_go_online">Go Online</string>
    <string name="text_amount">AMOUNT</string>
    <string name="text_send">SEND</string>
    <string name="text_call">CALL</string>
    <string name="text_walker_started">TAP WHEN STARTED</string>
    <string name="text_walker_arrived">TAP WHEN ARRIVED</string>
    <string name="text_walk_started">START TRIP</string>
    <string name="text_walk_completed">END TRIP</string>
    <string name="text_job_done">JOB DONE</string>
    <string name="text_empty_feedback">How was your trip?</string>
    <string name="text_empty_rating">Please give rating to client.</string>
    <string name="text_edit_profile">EDIT PROFILE</string>
    <string name="text_update_profile">UPDATE PROFILE</string>
    <string name="error_valid_email">Please enter valid email address</string>
    <string name="error_empty_email">Please enter email address</string>
    <string name="error_empty_password">Current password must not be blank</string>
    <string name="error_empty_retypepassword">You must enter confirm new password</string>
    <string name="error_valid_password">Password should at least 6 characters long</string>
    <string name="error_mismatch_password">Your new password and confirm new password do not match</string>
    <string name="error_empty_fname">Please enter first name</string>
    <string name="error_empty_lname">Please enter last name</string>
    <string name="error_empty_number">Please enter mobile phone number</string>
    <string name="error_empty_address">Please enter address</string>
    <string name="error_empty_bio">Please enter bio</string>
    <string name="error_empty_reg_password">Please enter password</string>
    <string name="error_empty_zipcode">Please enter zipcode</string>
    <string name="error_empty_image">Please select profile image</string>
    <string name="error_empty_type">Please select service type</string>
    <string name="error_empty_area">Please enter area code</string>
    <string name="error_empty_operator">Please enter operator name</string>
    <string name="register_gcm">Registering for GCM</string>
    <string name="register_gcm_failed">Failed to register with GCM</string>
    <string name="dialog_logout">LOGOUT</string>
    <string name="dialog_logout_text">Are you sure you want to logout?</string>
    <string name="dialog_exit_caps">EXIT</string>
    <string name="dialog_exit_text">Are you sure you want to exit?</string>
    <string name="toast_no_internet">Internet not available</string>
    <string name="toast_signin_failed">Signin failed</string>
    <string name="toast_register_success">Thank you. Please check your email and activate your account</string>
    <string name="toast_register_failed">Registration failed</string>
    <string name="toast_facebook_login_failed">facebook login failed</string>
    <string name="toast_unable_to_selct_image">unable to select image</string>
    <string name="toast_unable_respond_request">Unable to respond request</string>
    <string name="toast_unable_send_request">Request sending failed</string>
    <string name="toast_feedback_success">Feedback successfully given</string>
    <string name="toast_feedback_failed">Feedback sending failed</string>
    <string name="toast_fare_sent">Fare sent for confirmation</string>
    <string name="toast_fare_confirmed">Fare confirmed</string>
    <string name="toast_time_over">Your time is over for respond request</string>
    <string name="toast_number_not_found">Number not found</string>
    <string name="toast_update_profile_success">Update Successed</string>
    <string name="toast_update_profile_failed">Update Failed</string>
    <string name="toast_email_ivalid">Not a valid email</string>
    <string name="toast_forget_password_success">Password sent to your registerd email address</string>
    <string name="dialog_title_select_time">SELECT TIME</string>
    <string name="dialog_title_country_codes">COUNTRY CODES</string>
    <string name="dialog_chhose_photo">CHOOSE PHOTO</string>
    <string name="dialog_from_gallery">GALLERY</string>
    <string name="text_rego_number">Rego Number</string>
</resources>